--- a/views/_header.pug
+++ b/views/_header.pug
@@ -10,6 +10,9 @@ header.header
         img.nav__user-img(src=`/img/users/${user.photo}` alt=`Photo of ${user.name}`)
         span= user.name.split(' ')[0]
     else
-      a.nav__el(href='/login') Log in
-      a.nav__el.nav__el--cta(href='#') Sign up
+      if (page==='signup')
+        a.nav__el(href='/login') Log in
+      else
+        a.nav__el(href='/login') Log in
+        a.nav__el.nav__el--cta(href='/signup') Sign up
 
