--- a/views/login.pug
+++ b/views/login.pug
@@ -2,14 +2,17 @@ extends base
 
 block content
   main.main
-  .login-form
-    h2.heading-secondary.ma-bt-lg Log into your account
-    form.form.form--login
+    .login-form
+      h2.heading-secondary.ma-bt-lg Log into your account
+      form.form.form--login
+        .form__group
+          label.form__label(for='email') Email address
+          input#email.form__input(type='email', placeholder='you@example.com', required)
+        .form__group.ma-bt-md
+          label.form__label(for='password') Password
+          input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+        .form__group
+          button.btn.btn--green Login
       .form__group
-        label.form__label(for='email') Email address
-        input#email.form__input(type='email', placeholder='you@example.com', required)
-      .form__group.ma-bt-md
-        label.form__label(for='password') Password
-        input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
-      .form__group
-        button.btn.btn--green Login
+        p(style='margin-top: 1rem; font-size: 2.0rem;') Don't have an account?
+          a(href='/signup' style='margin-left: 1.5rem; font-size: 2.0rem; color: #2b8a3e;') Sign up
