Add Forget password route

--- a/views/login.pug
+++ b/views/login.pug
@@ -11,8 +11,10 @@ block content
         .form__group.ma-bt-md
           label.form__label(for='password') Password
           input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
+        a(href="#" style=' margin-left: 28rem; font-size: 1.8rem; color: #2b8a3e;') Forgot Password
         .form__group
           button.btn.btn--green Login
       .form__group
-        p(style='margin-top: 1rem; font-size: 2.0rem;') Don't have an account?
-          a(href='/signup' style='margin-left: 1.5rem; font-size: 2.0rem; color: #2b8a3e;') Sign up
+        p(style='margin-top: 1.5rem; font-size: 1.8rem;') Don't have an account?
+          a(href='/signup' style='margin-left: 1rem; font-size: 1.8rem; color: #2b8a3e;') Sign up
+          
