--- a/views/login.pug
+++ b/views/login.pug
@@ -11,7 +11,7 @@ block content
         .form__group.ma-bt-md
           label.form__label(for='password') Password
           input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
-        a(href="#" style=' margin-left: 28rem; font-size: 1.8rem; color: #2b8a3e;') Forgot Password
+        a(href="/forgot-password" style=' margin-left: 28rem; font-size: 1.8rem; color: #2b8a3e;') Forgot Password
         .form__group
           button.btn.btn--green Login
       .form__group
