--- a/views/email/resetPassword.pug
+++ b/views/email/resetPassword.pug
@@ -2,8 +2,8 @@ extends baseEmail
 
 block content
   p Hi #{firstName},
-  p Forgot your password? Make a patch request to the url: #{url} with new password and confirm password
-  p (This action is not implemented yet)
+  //- p Forgot your password? Make a patch request to the url: #{url} with new password and confirm password
+  p Forgot your password? 😱 Don't worry. Click on the below button to reset your Password 🔑
   table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
     tbody
       tr
