--- a/views/forgotPassword.pug
+++ b/views/forgotPassword.pug
@@ -9,4 +9,4 @@ block content
         label.form__label(for='email') Email
         input#email.form__input(type='text', placeholder='Enter your ragister email', required)
       .form__group
-        button#submmit--btn.btn.btn--green Continues
+        button#submmit--btn.btn.btn--green Continue
