--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -4,12 +4,12 @@ block content
   main.main
   .login-form
     h2.heading-secondary.ma-bt-lg Reset password
-    form.form.form--signup
+    form.form.form--reset-password
       .form__group
-        label.form__label(for='password') Password
+        label.form__label(for='password') New Password
         input#password.form__input(type='password', placeholder='••••••••', required, minlength='8')
       .form__group.ma-bt-md
-        label.form__label(for='passwordConfirm') Confirm Password
+        label.form__label(for='passwordConfirm') Confirm New Password
         input#passwordConfirm.form__input(type='password', placeholder='••••••••', required, minlength='8')
       .form__group
         button#submmit--btn.btn.btn--green Reset Password
