--- a/views/email/resetPassword.pug
+++ b/views/email/resetPassword.pug
@@ -2,7 +2,6 @@ extends baseEmail
 
 block content
   p Hi #{firstName},
-  //- p Forgot your password? Make a patch request to the url: #{url} with new password and confirm password
   p Forgot your password? 😱 Don't worry. Click on the below button to reset your Password 🔑
   table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
     tbody
@@ -12,5 +11,5 @@ block content
             tbody
               tr
                 td
-                  a(href=`${url}`, target='_blank') Reset Your Password
-  p If you dont forgot password please ignore this email
+                  a(href=url, target='_blank') Reset Your Password
+  p If you don't forgot your password, please ignore this email.
