--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,6 +234,55 @@ body {
   background-color: #55c57a;
   color: #fff;
 }
+
+.button--feature {
+  background-color: #fff;
+  border: 0 solid #e2e8f0;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  color: #0d172a;
+  cursor: pointer;
+  display: inline-block;
+  font-family:
+    'Basier circle',
+    -apple-system,
+    system-ui,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    'Noto Sans',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
+  font-size: 1.1rem;
+  font-weight: 600;
+  line-height: 1;
+  padding: 1rem 1.6rem;
+  text-align: center;
+  text-decoration: none #0d172a solid;
+  text-decoration-thickness: auto;
+  transition: all 0.1s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button--feature:hover {
+  background-color: #444;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .button-81 {
+    font-size: 1.125rem;
+    padding: 1rem 2rem;
+  }
+}
+
 .btn--green::after {
   background-color: #55c57a;
 }
@@ -542,9 +591,9 @@ body {
   position: relative;
   height: 65rem;
   margin-top: calc(0px - var(--section-rotate));
-} 
+}
 
- #map {
+#map {
   position: absolute;
   top: 0;
   bottom: 0;
@@ -1070,11 +1119,18 @@ body {
 }
 
 .card-container {
+  text-align: center;
   max-width: 120rem;
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 7rem;
+}
+
+.card-features {
+  margin-bottom: 5rem;
+  font-size: xx-large;
+  border-radius: 2rem;
 }
 
 .card {
