--- a/views/signup.pug
+++ b/views/signup.pug
@@ -12,7 +12,7 @@ block content
         label.form__label(for='role') Role
         select#role.form__input(type='text', required)
           option.form__input(value='user') User
-          option.form__input(value='admin') Admin
+          //- option.form__input(value='admin') Admin
           option.form__input(value='lead-guide') Lead Guide
           option.form__input(value='guide') Guide
       .form__group
