--- a/views/_footer.pug
+++ b/views/_footer.pug
@@ -13,4 +13,5 @@
     li
       a(href='#') Contact
   p.footer__copyright
-    | &copy; by Saurabh Pawar and Akash Panse. All rights reserved.
+    | &copy; by Pratik Patil. All rights reserved.
+    //- | &copy; by Saurabh Pawar and Akash Panse. All rights reserved.
